@@ -10,6 +10,7 @@ pipeline {
 	environment {
 		def USERMAIL = "1058180192@qq.com;lei.fan@capgemini.com"
 		MAVEN_OPTS="-Xmx256m"
+		//MAVEN_OPTS=-Xmx512M -XX:MaxPermSize=512M
 	}
 	
 	stages {
